--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,4 @@
-
+0
 @import url('https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap');
 
 html,
@@ -17,7 +17,7 @@ a {
 }
 
 h1 {
-  font-family: 'Zen Dots', cursive;
+  font-family: 'Zen Dots', 'Roboto', Helvetica, Arial, sans-serif;
   font-size: 2rem;
   letter-spacing: 0.2rem;
   font-weight: 700;
