--- a/components/Layout/Layout.module.css
+++ b/components/Layout/Layout.module.css
@@ -1,4 +1,10 @@
 .main {
   margin: 3rem auto;
-  width: 90%;
+  width: 99%;
+}
+
+@media screen and (min-width: 768px) {
+  .main {
+    width: 90%;
+  }
 }
